avoid useless scrollbar in roster

--- a/src/main/resources/static/jb3-frontend.css
+++ b/src/main/resources/static/jb3-frontend.css
@@ -44,7 +44,3 @@
 #jb3-controls-message {
     width: 50%;
 }
-
-#jb3-controls-room {
-    display: block;
-}
